<resources>
    <string name="app_name">MeetnEat</string>
    <string name="per_handler_title">Your friends</string>
    <string name="res_info_title">Your Reservation</string>
    <string name="per_info_title">Person</string>
    <string name="per_info_btn">Update</string>
    <string name="updateBtn">Update</string>
    <string name="res_add_title">Add a reservation</string>
    <string name="res_add_restaurantname">Restaurant Name:</string>
    <string name="res_add_date">Date:</string>
    <string name="res_add_time">Time:</string>
    <string name="res_add_people">Friend name:</string>
    <string name="res_add_btn">Edit/Save</string>
    <string name="rest_add_title">Add a restaurant</string>
    <string name="rest_add_restaurantname">Restaurant Name:</string>
    <string name="rest_add_address">Address:</string>
    <string name="rest_add_type">Type:</string>
    <string name="rest_add_phone">Phone:</string>
    <string name="rest_add_btn">Add Restaurant</string>
    <string name="rest_handler_title">Your restaurants</string>
    <string name="per_add_title">Add a friend</string>
    <string name="rest_title">Update Restaurant</string>
    <string name="per_add_name">Friend name:</string>
    <string name="per_add_phone">Phone:</string>
    <string name="per_add_btn">Register</string>
    <string name="setting_title">Preferences</string>
    <string name="pref_onoff_btn">SMS Service</string>
    <string name="pref_time_setting">Notification Time</string>
    <string name="toolbar_add">Add</string>
    <string name="toolbar_delete">Delete</string>
    <string name="deleteDialogOk">Delete</string>
    <string name="deleteDialogNotOk">Back</string>
    <string name="deleteDialog">Are you sure you want to delete?</string>



</resources>
