<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservationAdder">

    <Toolbar
        android:id="@+id/reservationadder_toolbar"
        style="@style/Toolbar"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/ToolbarTitle"
            android:text="@string/res_add_title"
            />
    </Toolbar>

    <include
        android:id="@+id/nav_toolbar"
        layout="@layout/navtoolbar" />


    <TextView
        android:id="@+id/res_name"
        app:layout_constraintTop_toBottomOf="@id/reservationadder_toolbar"
        android:text="@string/res_add_restaurantname"
        style="@style/InfoHeader"
        />

    <EditText
        android:id="@+id/res_add_name"
        app:layout_constraintTop_toBottomOf="@id/res_name"
        style="@style/InfoEdit"

        />
    <TextView
        android:id="@+id/res_date"
        app:layout_constraintTop_toBottomOf="@id/res_add_name"
        android:text="@string/res_add_date"
        style="@style/InfoHeader"

        />

    <EditText
        android:id="@+id/res_add_date"
        app:layout_constraintTop_toBottomOf="@id/res_date"
        style="@style/InfoEdit"

        />

    <TextView
        android:id="@+id/res_time"
        app:layout_constraintTop_toBottomOf="@id/res_add_date"
        android:text="@string/res_add_time"
        style="@style/InfoHeader"

        />
    <EditText
        android:id="@+id/res_add_time"
        app:layout_constraintTop_toBottomOf="@id/res_time"
        style="@style/InfoEdit"

        />
    <TextView
        android:id="@+id/res_people"
        app:layout_constraintTop_toBottomOf="@id/res_add_time"
        android:text="@string/res_add_people"
        style="@style/InfoHeader"

        />
    <EditText
        android:id="@+id/res_add_people"
        app:layout_constraintTop_toBottomOf="@id/res_people"
        style="@style/InfoEdit"

        />




</android.support.constraint.ConstraintLayout>