<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/restaurantadder_toolbar"
        style="@style/Toolbar"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/ToolbarTitle"
            android:text="@string/rest_add_title"
            />
    </Toolbar>

    <include
        android:id="@+id/nav_toolbar"
        layout="@layout/navtoolbar" />


    <TextView
        android:id="@+id/rest_name"
        app:layout_constraintTop_toBottomOf="@id/restaurantadder_toolbar"
        android:text="@string/rest_add_restaurantname"
        style="@style/InfoHeader"

        />

    <EditText
        android:id="@+id/rest_add_name"
        app:layout_constraintTop_toBottomOf="@id/rest_name"
        style="@style/InfoEdit"
        />

    <TextView
        android:id="@+id/rest_address"
        app:layout_constraintTop_toBottomOf="@id/rest_add_name"
        android:text="@string/rest_add_address"
        style="@style/InfoHeader"

        />



    <EditText
        android:id="@+id/rest_add_address"
        app:layout_constraintTop_toBottomOf="@id/rest_address"
        style="@style/InfoEdit"

        />

    <TextView
        android:id="@+id/rest_phone"
        app:layout_constraintTop_toBottomOf="@id/rest_add_address"
        android:text="@string/rest_add_phone"
        style="@style/InfoHeader"

        />



    <EditText
        android:id="@+id/rest_add_phone"
        app:layout_constraintTop_toBottomOf="@id/rest_phone"
        style="@style/InfoEdit"

        />


    <TextView
        android:id="@+id/rest_type"
        app:layout_constraintTop_toBottomOf="@id/rest_add_phone"
        android:text="@string/rest_add_type"
        style="@style/InfoHeader"

        />



    <EditText
        android:id="@+id/rest_add_type"
        app:layout_constraintTop_toBottomOf="@id/rest_type"
        style="@style/InfoEdit"

        />




</android.support.constraint.ConstraintLayout>