<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantInfo">

    <Toolbar
        android:id="@+id/restaurantinfo_toolbar"
        style="@style/Toolbar"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/ToolbarTitle"
            android:text="@string/rest_title"
            />
    </Toolbar>

    <include
        android:id="@+id/nav_toolbar"
        layout="@layout/navtoolbar" />


    <TextView
        android:id="@+id/rest_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/restaurantinfo_toolbar"
        android:text="@string/res_add_restaurantname"
        />


    <EditText
        android:id="@+id/rest_info_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rest_name"
        />

    <TextView
        android:id="@+id/rest_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rest_info_name"
        android:text="@string/rest_add_address"
        />

    <EditText
        android:id="@+id/rest_info_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rest_address"
        />

    <TextView
        android:id="@+id/rest_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rest_info_address"
        android:text="@string/rest_add_phone"
        />

    <EditText
        android:id="@+id/rest_info_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rest_phone"
        />


    <TextView
        android:id="@+id/rest_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rest_info_phone"
        android:text="@string/rest_add_type"
        />

    <EditText
        android:id="@+id/rest_info_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rest_type"
        />

    <Button
        android:id="@+id/rest_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateBtn"
        android:onClick="updateRestaurant"
        app:layout_constraintTop_toBottomOf="@id/rest_info_type"
        />



</android.support.constraint.ConstraintLayout>