<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonAdder">

    <Toolbar
        android:id="@+id/personadder_toolbar"
        style="@style/Toolbar"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/ToolbarTitle"
            android:text="@string/per_add_title"
            />
    </Toolbar>

    <include
        android:id="@+id/nav_toolbar"
        layout="@layout/navtoolbar" />


    <TextView
        android:id="@+id/per_name"
        app:layout_constraintTop_toBottomOf="@id/personadder_toolbar"
        android:text="@string/per_add_name"
        style="@style/InfoHeader"
        />

    <EditText
        android:id="@+id/per_add_name"
        app:layout_constraintTop_toBottomOf="@id/per_name"
        style="@style/InfoEdit"
        />

    <TextView
        android:id="@+id/per_phone"
        app:layout_constraintTop_toBottomOf="@id/per_add_name"
        android:text="@string/per_add_phone"
        style="@style/InfoHeader"

        />
    <EditText
        android:id="@+id/per_add_phone"
        app:layout_constraintTop_toBottomOf="@id/per_phone"
        style="@style/InfoEdit"

        />




</android.support.constraint.ConstraintLayout>